--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>guava</artifactId>
             <optional>true</optional>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.errorprone</groupId>
+                    <artifactId>error_prone_annotations</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
